Made the file tree more stable, and fixed jumping viewport

--- a/css/visualization/filetree.css
+++ b/css/visualization/filetree.css
@@ -36,3 +36,7 @@
   .ghostCircle, .activeDrag .ghostCircle{
        display: none;
   }
+
+  html{
+      overflow: hidden;
+  }
